--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
+# macOS
 .DS_Store
+
+# Swift Package Manager
 /.build
 /Packages
+Package.resolved
+
+# Xcode
 xcuserdata/
 DerivedData/
+*.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+
+# SwiftPM/Xcode integration
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+.swiftpm/xcode/xcuserdata/
+
+# Credentials
 .netrc
+
+# Example project build artifacts
+Example/.build
