Add SentinelRules package and Xcode integration
Make the example rules a local Swift package and wire it into the Xcode project.

- Create Example/SentinelExample/SentinelRules/Package.swift to define the SentinelRules Swift package.
- Move rule sources into a Sources directory so they are package targets.
- Update .sentinel.yml to point to SentinelRules/Sources for rules discovery.
- Remove the generated .swiftpm workspace contents file.
- Update Example Xcode project to reference the local SentinelRules package and its product.
- Add iOS(.v16) to the top-level Package.swift platforms alongside macOS.

These changes allow the example project to consume the rules as a local Swift package and keep the source layout compatible with SwiftPM and Xcode.

--- a/Example/SentinelExample/.sentinel.yml
+++ b/Example/SentinelExample/.sentinel.yml
@@ -2,7 +2,7 @@
 # Rules are pure Swift files that implement the Rule protocol.
 
 rules:
-  - SentinelRules
+  - SentinelRules/Sources
 
 exclude:
   - SentinelExampleTests
