--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,6 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - uses: swift-actions/setup-swift@v2
       with:
         swift-version: "6.2"
     - name: Build
