--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,13 +12,10 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: macos-26
 
     steps:
     - uses: actions/checkout@v4
-    - uses: swift-actions/setup-swift@v2
-      with:
-        swift-version: "6.2"
     - name: Build
       run: swift build -v
     - name: Run tests
